// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Highlight /> should render the headings and buttons 1`] = `
<main
  class=""
>
  <h2
    class=""
  >
    Heading 1
  </h2>
  <h2
    class=""
  >
    Heading 2
  </h2>
</main>
`

exports[`<Highlight /> should render the headings and buttons 2`] = `
<main
  class="sc-bdfBwQ"
>
  <h2
    class="sc-gsTCUz"
  >
    Heading 1
  </h2>
  <h2
    class="sc-dlfnbm"
  >
    Heading 2
  </h2>
</main>
`
